[package]
name = "wexit"
version = "0.1.0"
authors = ["ns <portification@gmail.com>"]
edition = "2018"
description = "Detect whether CLI programs have their own Windows console, and prompt to exit."
documentation = "https://docs.rs/wexit"
repository = "https://github.com/qoh/wexit"
keywords = ["cli", "windows"]
categories = ["command-line-interface", "os::windows-apis"]
license = "MIT"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "wincon", "winuser"] }
